# gstudy

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
app/: Cargo.toml
app/src/: container.rs  lib.rs  plugin.rs
core/: Cargo.toml  build.rs
core/src/: cache.rs  context.rs  debug.rs  ds.rs  event.rs  graph.rs  lib.rs  mesh.rs  ps.rs  resource.rs  texture.rs  types.rs  ui.rs  util.rs
core/src/backends/: mod.rs  wgpu_backend.rs
core/src/geometry/: mod.rs
core/src/graph/: rdg.rs  sg.rs  tg.rs
core/src/graph/rdg/: backend.rs  pass.rs  present.rs  resource.rs
core/src/material/: basic.rs  bind.rs  egui.rs  input.rs  mod.rs
core/src/mesh/: builder.rs  intersect.rs  merge.rs
core/src/render/: collection.rs  collector.rs  common.rs  material.rs  mod.rs  pso.rs  tech.rs
core/src/render/material/: basic.rs  egui.rs
core/src/render/pso/: immediate_pso.rs
core/src/scene/: camera.rs  container.rs  controller.rs  manager.rs  mod.rs  pool.rs  renderable.rs  scene.rs  sort.rs  transform.rs
core/src/scene/controller/: orbit.rs  trackball.rs
core/src/scene/ext/: indicator.rs
core/src/shaders/ui/: ui.frag
egui-render/: Cargo.toml
egui-render/src/: lib.rs  material.rs  material_render.rs  mesh.rs  util.rs
examples/alphatest/: Cargo.toml
examples/alphatest/src/: main.rs
examples/builtin_geometries/: Cargo.toml
examples/builtin_geometries/src/: main.rs
examples/cube/: Cargo.toml
examples/cube/src/: main.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
examples/empty/: Cargo.toml
examples/empty/src/: main.rs
examples/gltf-viewer/: Cargo.toml
examples/gltf-viewer/src/: main.rs
examples/instance/: Cargo.toml
examples/instance/src/: main.rs
examples/phong/: Cargo.toml
examples/phong/src/: main.rs
examples/renderqueue/: Cargo.toml
examples/renderqueue/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
geometry/: Cargo.toml
geometry/src/: cube.rs  lib.rs  mesh.rs  plane.rs  uvsphere.rs
geometry/src/mesh/: circle.rs  cube.rs  plane.rs  skybox.rs  uvsphere.rs
gltfloader/: Cargo.toml
gltfloader/src/: lib.rs  material_loader.rs  taskpool.rs
gltfloader/src/material_loader/: basic_loader.rs  phong_loader.rs
gstudy/: Cargo.toml  build.rs
gstudy/src/: entry.rs  lib.rs  loader.rs  logic.rs  looper.rs  main.rs  taskpool.rs  util.rs
phong-render/: Cargo.toml
phong-render/src/: lib.rs  light.rs  material.rs  material_render.rs
phong-render/src/material_render/: base.rs  shadow.rs
shaders/: camera.wgsl  desc.toml  object.wgsl
shaders/basic/: forward.toml  forward.wgsl
shaders/depth/: depth.toml  depth.wgsl
shaders/phong/: forward_add.wgsl  forward_base.wgsl  light.wgsl  material.wgsl  phong.toml
shaders/shadow/: shadow.toml  shadow.wgsl
shaders/ui/: ui.toml  ui.wgsl
src/: canvas.rs  entry.rs  event.rs  executor.rs  gpu_context.rs  lib.rs  loader.rs  looper.rs  main.rs  main_loop.rs  maps.rs  model.rs  render_window.rs  renderer.rs  statistics.rs  types.rs  ui.rs  util.rs  worker.rs
src/backends/: mod.rs  wgpu_backend.rs
src/core/: context.rs  mod.rs  ps.rs
src/core/backends/: mod.rs  wgpu_backend.rs
src/funcs/: mod.rs
src/geometry/: axis.rs  mod.rs  plane.rs  sphere.rs
src/modules/: mod.rs
src/modules/hardware_renderer/: common.rs  material.rs  mod.rs
src/modules/hardware_renderer/material/: basic.rs  egui.rs
src/modules/ray_tracing/: mod.rs
src/modules/sofeware_renderer/: mod.rs
src/modules/software_renderer/: mod.rs
src/render/: camera.rs  canvas.rs  executor.rs  material.rs  mod.rs  scene.rs  transform.rs
src/render/material/: basic.rs
src/scene/: mod.rs
src/shaders/: canvas.frag  canvas.vert  ui.frag  ui.vert
src/shaders/material/basic/: forward.frag  forward.vert
src/shaders/material/constant/: constant.frag  constant.vert
src/shaders/material/depth/: depth.frag
src/shaders/material/ui/: ui.vert
src/ui/: egui_renderer.rs  logic.rs  mod.rs  subwindow.rs
src/ui/logic/: entry.rs  mod.rs
tshader/: Cargo.toml
tshader-builder/: Cargo.toml  json.json
tshader-builder/src/: compiler.rs  lib.rs  main.rs  preprocessor.rs
tshader/src/: cache.rs  default_loader.rs  lib.rs  reflection.rs  tech.rs
window/: Cargo.toml
window/src/: container.rs  lib.rs  looper.rs  statistics.rs  util.rs  window.rs
