[package]
name = "gstudy"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.26"}
wgpu = { version = "0.12" , default-features = false, features = ["spirv", "webgl"]}
egui = "0.18.1"
log = "0.4"
lazy_static = "1.4"
anyhow = "1.0.57"
nalgebra = "0.31"
spirq = "0.5"
ouroboros = "0.15"
atomic = "0.5"
parking_lot = "0.12"
arboard = "2.1.1"
rfd = "0.9"
wasm-timer = "0.2"
pollster="0.2"
webbrowser = "0.7.1"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.23", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"
wasm-bindgen="0.2"
wasm-bindgen-futures="0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"


[build-dependencies]
shaderc = "0.8"
vergen = {version = "7.2", default-features = false, features = ["build", "cargo", "git", "rustc"]}

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false