[package]
name = "gstudy"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.27", default-features = false, features = ["x11", "wayland"]}
wgpu = { version = "0.14" , default-features = false, features = ["spirv", "webgl"]}
egui = "0.20.1"
log = "0.4"
lazy_static = "1.4"
anyhow = "1.0.57"
nalgebra = "0.31.4"
spirq = "0.6"
spirv_headers = "1.5"
ouroboros = "0.15"
atomic = "0.5"
parking_lot = "0.12"
rfd = "0.10.0"
# wasm-timer = "0.2"
instant = "0.1.12"
pollster="0.2"
webbrowser = "0.8"
image = "0.24"
gltf = {version = "1.0", features = ["extras", "names"]}
bitflags = "1.3"
murmur3 = "0.5"
smallvec = "1.10"
dashmap = "5.4"
urlencoding = "2.1"
num_cpus = "1.15"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.43", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console", "Win32_UI_HiDpi"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"
wasm-bindgen="0.2"
wasm-bindgen-futures="0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
arboard = "3.2"
font-kit = "0.11"


[build-dependencies]
shaderc = "0.8"
anyhow = "1.0.57"
vergen = {version = "7.2", default-features = false, features = ["build", "cargo", "git", "rustc"]}

[lib]
crate-type = ["cdylib", "rlib"]
name = "gstudy_lib"
path = "src/lib.rs"

[[bin]]
name = "gstudy"
path = "src/main.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false