[workspace]
members = ["./core", "./app", "./tshader", "./tshader-builder"
    , "./gltfloader", "./window", "./geometry", "./phong-render"
    , "./egui-render", "examples/triangle", "examples/egui", "examples/gltf-viewer"
    , "examples/empty", "examples/cube", "examples/phong", "examples/builtin_geometries"
    , "examples/instance"]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1