[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.14" , default-features = false, features = ["spirv", "webgl"]}
egui = "0.20.1"
log = "0.4"
lazy_static = "1.4"
anyhow = "1.0.57"
nalgebra = "0.31.4"
spirq = "0.6"
spirv_headers = "1.5"
ouroboros = "0.15"
atomic = "0.5"
parking_lot = "0.12"
pollster="0.2"
bitflags = "1.3"
murmur3 = "0.5"
smallvec = "1.10"
dashmap = "5.4"
raw-window-handle = "0.5.0"
petgraph = "0.6.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"
wasm-bindgen="0.2"
wasm-bindgen-futures="0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2"
font-kit = "0.11"


[build-dependencies]
shaderc = "0.8"
anyhow = "1.0.57"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false