[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.1" , features = ["webgl"]}
log = "0.4"
lazy_static = "1.4"
anyhow = "1.0.57"
nalgebra = "0.32.2"
indexmap = "2.0"
spirv_headers = "1.5"
ouroboros = "0.18"
atomic = "0.6"
parking_lot = "0.12"
pollster="0.3"
bitflags = "2.3"
murmur3 = "0.5"
smallvec = "1.10"
dashmap = "5.5"
raw-window-handle = "0.6.0"
petgraph = "0.6.2"
tshader = {path="../tshader"}
bytes = "1.0"
smartstring = "1.0.1"
num-traits = "0.2.16"
num_enum = "0.7"
ordered-float = "4"
fxhash = "0.2.1"
bitmaps = "3.2.0"
profiling = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1"
web-sys = "0.3"
wasm-bindgen="0.2"
wasm-bindgen-futures="0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2"


[build-dependencies]
shaderc = "0.8"
anyhow = "1.0.57"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false