[package]
name = "gltfloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = {version = "1.0", features = ["extras", "names"]}
core = {path = "../core"}
nalgebra = "0.32.2"
anyhow = "1.0.57"
wgpu = { version = "0.17" , default-features = false, features = ["webgl", "wgsl"]}
log = "0.4"
urlencoding = "2.1"
num_cpus = "1.15"
image = "0.24"
app = {path = "../app"}
memmap2 = "0.7.1"

