[package]
name = "gstudy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", default-features = false, features = ["x11", "wayland"]}
rfd = "0.11.4"
core = {path = "../core"}
anyhow = "1.0.57"
log = "0.4"
egui = "0.22.0"
# wasm-timer = "0.2"
instant = "0.1.12"
gltf = {version = "1.0", features = ["extras", "names"]}
image = "0.24"
webbrowser = "0.8"
num_cpus = "1.15"
urlencoding = "2.1"
nalgebra = "0.32.2"
wgpu = { version = "0.17" , default-features = false, features = ["webgl", "wgsl"]}
bytes = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
slog = "2.7.0"
slog-stdlog = "4.1.1"
slog-async = "2.7.0"
slog-term = "2.9"
slog-scope = "4.4.0"
slog-envlogger = "2.2.0"
arboard = "3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1"
web-sys = "0.3"
wasm-bindgen="0.2"
wasm-bindgen-futures="0.4"


[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
windows = {version = "0.43", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console", "Win32_UI_HiDpi"]}

[build-dependencies]
vergen = {version = "8.2", default-features = false, features = ["build", "cargo", "git", "git2", "rustc"]}
