[package]
name = "phong-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.17" , default-features = false, features = ["webgl", "wgsl"]}
core = {path = "../core"}
log = "0.4"
anyhow = "1.0.57"
app = {path = "../app"}
tshader = {path="../tshader"}
fxhash = "0.2.1"
smallvec = "1.10"

