[package]
name = "tshader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"
naga = {version="0.19", features = ["wgsl-in"]}
anyhow = "1.0.57"
wgpu-types = "0.19"
num_enum = "0.7"
dashmap = "5.4.0"
tshader-builder = {path="../tshader-builder"}
wgpu = { version = "0.19" }
log = "0.4"
profiling = "1.0"
