[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30", default-features = false, features = ["x11", "wayland", "rwh_06"]}
core = {path = "../core"}
anyhow = "1.0.57"
log = "0.4"
webbrowser = "1.0.2"
instant = "0.1.12"
app = {path = "../app"}
raw-window-handle = "0.6"
profiling = "1.0"
