[package]
name = "egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../../core"}
window = {path = "../../window"}
env_logger = "0.10"
egui-render = {path = "../../egui-render"}
egui = "0.23.0"
app = {path = "../../app"}
log = "0.4"
profiling = "1.0"

[features]
profile-with-tracy = ["profiling/profile-with-tracy"]