[package]
name = "gltf-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../../core"}
window = {path = "../../window"}
gltfloader = {path = "../../gltfloader"}
app = {path = "../../app"}
env_logger = "0.11"
egui-render = {path = "../../egui-render"}
rfd = "0.14"
nalgebra = "0.32.2"
log = "0.4"
phong-render = {path="../../phong-render"}
profiling = "1.0"

[features]
profile-with-tracy = ["profiling/profile-with-tracy"]