[package]
name = "instance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../../core"}
window = {path = "../../window"}
app = {path = "../../app"}
env_logger = "0.11"
geometry = {path="../../geometry"}
nalgebra = "0.32.2"
profiling = "1.0"

[features]
profile-with-tracy = ["profiling/profile-with-tracy"]
