[package]
name = "phong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../../core"}
window = {path = "../../window"}
app = {path = "../../app"}
phong-render = {path="../../phong-render"}
geometry = {path="../../geometry"}
env_logger = "0.10"
profiling = "1.0"

[features]
profile-with-tracy = ["profiling/profile-with-tracy"]