[package]
name = "renderqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../../core"}
window = {path = "../../window"}
app = {path = "../../app"}
env_logger = "0.10"
wgpu = { version = "0.18" , default-features = false, features = ["webgl", "wgsl"]}
geometry = {path="../../geometry"}
egui-render = {path = "../../egui-render"}
egui = "0.23.0"